--- a/index.html
+++ b/index.html
@@ -688,28 +688,28 @@
             <div style="width:80px;height:80px;background:rgba(255,255,255,0.1);border-radius:50%;display:flex;align-items:center;justify-content:center;margin-bottom:8px;overflow:hidden;">
                 <img src="anhs-school.jpg" alt="Sponsor 2 Logo" style="max-width:100%;max-height:100%;object-fit:contain;" />
             </div>
-            <small style="font-size:0.85rem;opacity:0.85;">Sponsor Two</small>
+            <small style="font-size:0.85rem;opacity:0.85;">Sponsor Name</small>
         </a>
 
         <a href="https://example3.com" target="_blank" rel="noopener sponsored" style="display:flex;flex-direction:column;align-items:center;text-decoration:none;color:#fff;opacity:0.9;transition:opacity 0.3s,transform 0.2s;width:140px;text-align:center;" onmouseover="this.style.opacity='1';this.style.transform='scale(1.03)';" onmouseout="this.style.opacity='0.9';this.style.transform='scale(1)';">
             <div style="width:100px;height:60px;background:rgba(255,255,255,0.1);border-radius:8px;display:flex;align-items:center;justify-content:center;margin-bottom:8px;overflow:hidden;">
                 <img src="https://via.placeholder.com/100x60/b21f1f/ffffff?text=BIZ3" alt="Sponsor 3 Logo" style="max-width:90%;max-height:90%;object-fit:contain;" />
             </div>
-            <small style="font-size:0.85rem;opacity:0.85;">Biz Sponsor</small>
+            <small style="font-size:0.85rem;opacity:0.85;">Sponsor Name</small>
         </a>
 
         <a href="https://example4.com" target="_blank" rel="noopener sponsored" style="display:flex;flex-direction:column;align-items:center;text-decoration:none;color:#fff;opacity:0.9;transition:opacity 0.3s,transform 0.2s;width:140px;text-align:center;" onmouseover="this.style.opacity='1';this.style.transform='scale(1.03)';" onmouseout="this.style.opacity='0.9';this.style.transform='scale(1)';">
             <div style="width:100px;height:60px;background:rgba(255,255,255,0.1);border-radius:8px;display:flex;align-items:center;justify-content:center;margin-bottom:8px;overflow:hidden;">
                 <img src="https://via.placeholder.com/100x60/1a2a6c/ffffff?text=TECH" alt="Sponsor 4 Logo" style="max-width:90%;max-height:90%;object-fit:contain;" />
             </div>
-            <small style="font-size:0.85rem;opacity:0.85;">Tech Co.</small>
+            <small style="font-size:0.85rem;opacity:0.85;">Sponsor Nameame</small>
         </a>
 
         <a href="https://example5.com" target="_blank" rel="noopener sponsored" style="display:flex;flex-direction:column;align-items:center;text-decoration:none;color:#fff;opacity:0.9;transition:opacity 0.3s,transform 0.2s;width:140px;text-align:center;" onmouseover="this.style.opacity='1';this.style.transform='scale(1.03)';" onmouseout="this.style.opacity='0.9';this.style.transform='scale(1)';">
             <div style="width:100px;height:60px;background:rgba(255,255,255,0.1);border-radius:8px;display:flex;align-items:center;justify-content:center;margin-bottom:8px;overflow:hidden;">
                 <img src="https://via.placeholder.com/100x60/7fff00/000000?text=S5" alt="Sponsor 5 Logo" style="max-width:90%;max-height:90%;object-fit:contain;" />
             </div>
-            <small style="font-size:0.85rem;opacity:0.85;">Support Inc.</small>
+            <small style="font-size:0.85rem;opacity:0.85;">Sponsor Name</small>
         </a>
     </div>
     <p style="
