--- a/index.html
+++ b/index.html
@@ -721,8 +721,8 @@
 </section>
         <footer>
             <p>Multi-File Excel Uploader &copy; 2025 | 
-              <a href="/privacyv2.html" style="color:#4facfe;">Privacy</a> • 
-              <a href="/sponsor.html" style="color:#4facfe;">Sponsor</a> • 
+              <a href="privacyv2.html" style="color:#4facfe;">Privacy</a> • 
+              <a href="sponsor.html" style="color:#4facfe;">Sponsor</a> • 
               All data stays in your browser.
             </p>
         </footer>
